# zeroth-core

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  PROGRESS.md  README.md  alembic.ini  dev_server.py  docker-compose.yml  index.html  live_test.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  zeroth.yaml
.claude/: launch.json
.github/workflows/: ci.yml  docs.yml  examples.yml  release-zeroth-core.yml  verify-extras.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v4.0-MILESTONE-AUDIT.md  v4.0-REQUIREMENTS.md  v4.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/studio/: .env.example  .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/studio-mockups/: index.html  package-lock.json  package.json
assets/openapi/: zeroth-core-openapi.json
concepts/: index.html
concepts/agents/: index.html
concepts/approvals/: index.html
concepts/audit/: index.html
concepts/conditions/: index.html
concepts/contracts/: index.html
concepts/dispatch/: index.html
concepts/econ/: index.html
concepts/execution-units/: index.html
concepts/graph/: index.html
concepts/guardrails/: index.html
concepts/identity/: index.html
concepts/mappings/: index.html
concepts/memory/: index.html
concepts/orchestrator/: index.html
concepts/policy/: index.html
concepts/runs/: index.html
concepts/secrets/: index.html
concepts/service/: index.html
concepts/storage/: index.html
concepts/webhooks/: index.html
docker/nginx/: nginx.conf  studio.conf
docker/regulus-sdk/: README.md
docs/: index.md
docs/concepts/: agents.md  approvals.md  artifacts.md  audit.md  conditions.md  context-window.md  contracts.md  dispatch.md  econ.md  execution-units.md  graph.md  guardrails.md  http-client.md  identity.md  index.md  mappings.md  memory.md  orchestrator.md  parallel.md  policy.md  runs.md  secrets.md  service.md  storage.md  subgraph.md  templates.md  webhooks.md
docs/how-to/: agents.md  approvals.md  audit.md  conditions.md  contracts.md  dispatch.md  econ.md  execution-units.md  graph.md  guardrails.md  identity.md  index.md  mappings.md  memory.md  migration-from-monolith.md  orchestrator.md  policy.md  runs.md  secrets.md  service.md  storage.md  webhooks.md
docs/reference/: configuration.md  http-api.md  index.md  python-api.md
docs/specs/: n8n-canvas-editor-ui-spec.md  n8n-editor-architecture.md  phase-6-identity-access-model.md  phase-7-governance-evidence.md
docs/tutorials/: governance-walkthrough.md  index.md
examples/: 00_hello.py  01_first_graph.py  02_multi_agent.py  03_conditional_branches.py  04_native_tool.py  05_memory.py  10_serve_in_python.py  11_serve_via_entrypoint.md  12_docker_compose.md  13_dev_server.py  20_approval_gate.py  21_policy_block.py  22_budget_cap.py  23_secrets_and_sandbox.py  24_audit_query.py  25_webhook_delivery.py  26_governance_walkthrough.py  30_contracts_and_mappings.py  31_guardrails.py  32_observability.py  33_mcp_tools.py  README.md  __init__.py  _common.py  _contracts.py  _tools.py  agent_handoff.py  approval_demo.py  approval_step.py  attach_memory.py  audit_query.py  budget_cap.py  condition_branch.py  first_graph.py  governance_walkthrough.py  hello.py  policy_block.py  sandbox_tool.py  secret_injection.py  webhook_retry.py
examples/service/: entrypoint.py  seed_deployment.py  zeroth.yaml
how-to/: index.html
how-to/agents/: index.html
how-to/approvals/: index.html
how-to/audit/: index.html
how-to/conditions/: index.html
how-to/contracts/: index.html
how-to/cookbook/: index.html
how-to/deployment/: index.html
how-to/dispatch/: index.html
how-to/econ/: index.html
how-to/execution-units/: index.html
how-to/graph/: index.html
how-to/guardrails/: index.html
how-to/identity/: index.html
how-to/mappings/: index.html
how-to/memory/: index.html
how-to/migration-from-monolith/: index.html
how-to/orchestrator/: index.html
how-to/policy/: index.html
how-to/runs/: index.html
how-to/secrets/: index.html
how-to/service/: index.html
how-to/storage/: index.html
how-to/webhooks/: index.html
live_scenarios/: README.md  __init__.py
live_scenarios/research_audit/: __init__.py  bootstrap.py  contracts.py  normalize_evidence.py  repo_search_cli.py  run_queries.py  run_server.py  tools.py
phases/phase-5-integration/: PROGRESS.md
phases/phase-6-identity-governance/: PLAN.md
phases/phase-7-transparent-governance/: PLAN.md
phases/phase-8-runtime-security/: PLAN.md
phases/phase-9-durable-control-plane/: PLAN.md
reference/: index.html
scripts/: archive_monolith.sh  dump_config.py  dump_openapi.py  publish_monolith_archive.sh  rename_to_zeroth_core.py  rewrite_zeroth_refs.sh  verify_monolith_archive.sh
search/: search_index.json
tests/: conftest.py  test_api_versioning.py  test_approval_sla.py  test_async_database.py  test_config.py  test_cost_api.py  test_docs_phase30.py  test_econ_adapter.py  test_econ_budget.py  test_econ_models.py  test_health_probes.py  test_litellm_adapter.py  test_litellm_adapter_forwarding.py  test_live_llm.py  test_mcp_integration.py  test_phase27_docstring_tooling.py  test_phase27_rename_scripts.py  test_phase39_manual_verification.py  test_postgres_backend.py  test_provider_request_extensions.py  test_retry_backoff.py  test_runner_api_parity.py  test_runner_mcp_wiring.py  test_smoke.py  test_studio_api.py  test_v4_bootstrap_validation.py  test_v4_cross_feature_integration.py  test_webhook_api.py  test_webhook_delivery.py  test_webhook_event_emission.py  test_webhook_models.py  test_webhook_repository.py  test_webhook_service.py
tutorials/: index.html
(+930 files in other folders)
