[project]
name = "zeroth-core"
version = "0.2.0"
description = "Governed medium-code platform for production-grade multi-agent systems"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = [
    "agents",
    "multi-agent",
    "llm",
    "governance",
    "fastapi",
    "workflows",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2.10",
    "pydantic-settings>=2.13",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.22",
    "alembic>=1.18",
    "PyJWT[crypto]>=2.10",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "governai>=0.2.3",
    "econ-instrumentation-sdk>=0.1.1",
    "tenacity>=8.2",
    "cachetools>=5.5",
    "litellm>=1.83,<2.0",
    "langchain-litellm>=0.3.4",
    "uvicorn>=0.30",
    "mcp>=1.7,<2.0",
    "redis>=5.3.1",
]

[project.optional-dependencies]
memory-pg = [
    "psycopg[binary]>=3.3",
    "psycopg-pool>=3.2",
    "pgvector>=0.4.2",
]
memory-chroma = [
    "chromadb-client>=1.5.6",
]
memory-es = [
    "elasticsearch[async]>=8.0,<9",
]
dispatch = [
    "redis>=5.0.0",
    "arq>=0.27",
]
sandbox = []
all = [
    "zeroth-core[memory-pg]",
    "zeroth-core[memory-chroma]",
    "zeroth-core[memory-es]",
    "zeroth-core[dispatch]",
    "zeroth-core[sandbox]",
]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.7.6,<10",
    "pymdown-extensions>=10.8",
    "mkdocs-section-index>=0.3.9",
    "mkdocstrings[python]>=0.26,<1",
]

[project.urls]
Homepage = "https://github.com/rrrozhd/zeroth-core"
Source = "https://github.com/rrrozhd/zeroth-core"
Issues = "https://github.com/rrrozhd/zeroth-core/issues"
Changelog = "https://github.com/rrrozhd/zeroth-core/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Namespace layout (PEP 420): src/zeroth has no __init__.py; hatchling packs src/zeroth/core/ under zeroth/core/ in the wheel. VERIFIED against 0.1.0 wheel. See 28-RESEARCH.md pitfall #2.
packages = ["src/zeroth"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "interrogate>=1.7",
    "libcst>=1.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
    "testcontainers[postgres]>=4.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not live'"
markers = [
    "live: marks tests requiring live API keys (deselect with '-m not live')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "D"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "B006", "B017", "E501", "F401", "F841", "I001", "SIM117"]
"scripts/*.py" = ["D"]
"src/zeroth/core/migrations/**/*.py" = ["D"]
# Examples use numeric-prefix filenames (``00_hello.py`` …) for reading
# order. They are runnable scripts, not importable modules, so the
# ``N999`` "invalid module name" rule does not apply. The minor
# pydocstyle / line-length / unused-var rules are muted to keep the
# tutorials focused on the topic instead of lint gymnastics.
"examples/**/*.py" = ["D205", "D301", "E501", "F841", "N999", "SIM105", "SIM115"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.interrogate]
fail-under = 90
ignore-init-method = true
ignore-init-module = true
ignore-nested-functions = true
exclude = ["src/zeroth/core/migrations", "tests", "scripts"]
